wasa2il/core/static/css/application.css
/* css for timepicker */
.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
.ui-timepicker-div dl { text-align: left; }
.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
.ui-timepicker-div td { font-size: 90%; }
.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }

.ui-timepicker-rtl{ direction: rtl; }
.ui-timepicker-rtl dl { text-align: right; }
.ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }

.search-form {
	margin-top: 5px;
}

.img-negpad {
	margin-top:	-5px;
	margin-bottom:	-5px;
}

@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('League_Gothic-webfont.eot');
    src: url('League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
         url('League_Gothic-webfont.woff') format('woff'),
         url('League_Gothic-webfont.ttf') format('truetype'),
         url('League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

h1 { font-family: 'LeagueGothicRegular'; font-weight: normal; font-size: 400%; }
h2 { font-family: 'LeagueGothicRegular'; font-weight: normal; font-size: 300%; }
h3 { font-family: 'LeagueGothicRegular'; font-weight: normal; font-size: 250%; }
a {
	color: #644f80;
}
a:hover {
	color: #47385b;
}

textarea {
     width: 100%;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
}

.right { text-align: right !important; }
.date { text-align: right !important; }


#statements_declarations ol li:before {
	content: value(statement-counter);
}

#statements_declarations ol {
	/* list-style-type:        lower-alpha; */
	counter-reset: 			statement-counter -1;
}

.candidates {
	min-height:			50px;
}

.candidates p {
	padding:			10px;
	border:				1px solid #ddd;
}

.candidates li {
	border-bottom:		1px solid #ddd;
	padding-bottom:		3px;
	font-size:			15pt;
}

.candidates li div {
	display:			block;
    height: 50px;
}

.candidates li div:hover {
	text-decoration:		none;
}

#candidates li {
	display:			block;
}

.vote-button {
    float: right;
    margin-top: 12px;
}

.vote-image {
    height: 50px;
    width: 50px;
}

#votes {
	background: 		#fff;
	list-style-type:			decimal;
}

#votes li {
	display:			list-item;
}


.memberstatusbox {
	padding:			5px;
	margin:				2px;
	margin-right:			10px;
	background:			#eee;
	border:				1px solid #ddd;
	border-radius:			3px;
}

.statementset ol {
	margin-top: 5px;
	margin-bottom: 5px;
}
.statementset#statements_references ol {
	list-style-type: square;
}
.statementset#statements_assumptions ol {
	list-style-type: upper-roman;
}
.statementset.empty-statementset ol {
	list-style-type: none !important;
	color: #999;
	font-style: italic;
}

.document-fragment {
	border: 1px solid #eee;
	padding: 3px;
	margin: 1em 3px;
	border-radius: 3px;
}

.statement_subheading {
	/*list-style-type:		none;*/
	counter-increment:		statement-counter;
	font-size:				150%;
	margin-top:				6px;
	margin-bottom:			2px;
}

.state_buttons {
	display:                none;
}

.statementset li {
	padding: 5px;
	margin: 3px;
	border-radius: 5px;
}

.statementset li:hover {
	background:		#eee;
}

.statementset .mover {
	display: none;
}

.statementset li:hover .mover {
	display: block;
	float: right;
	cursor: move;
}

.statementset li:hover > .state_buttons {
	display:                block;
	position:				absolute;
	padding-left:			50px;
}

.helptext {
	font-size:	8pt;
	color:	#888;
}

ul.nobullets {
	list-style-type: none;
}

.thumbnail {
	float:		left;
	position:	relative;
	width:		80px;
	height:		80px;
	display:	inline-block;
	margin:		3px;
	overflow:	hidden;
}

.thumbnail.member {
}
.thumbnail.member > img {
	position: absolute;
	z-index: -1;
}
.thumbnail.member .title {
	position: absolute;
	margin-right: auto;
	margin-left: auto;
	width: 80px;
	bottom: 0;
	text-align: center;
	background: rgba(255,255,255, 0.5);
}

.mainaction {
	display:	block;
	background:	#ccf;
	border:		1px solid #7768cc;
	border-radius:	15px;
	padding:	30px;
	color:		#000;
	min-height:	100px;
}

.mainaction:hover {
	text-decoration: none;
	background:	#eef;
}


footer {
	font-size:	10pt;
	margin-top:	30px;
}


.subnav {
	background:	#ccf;
	border-radius:	5px;
	padding-left:	10px;
	padding-right:	10px;
	margin-bottom:	20px;
}


.subnav > .nav {
	margin-bottom:	0px;
}


.icon-grey { color: #c0d0c0 }

#legal-text { font-family: serif; font-size: 12px; border: 1px #e0e0e0 solid; padding: 12px 24px 12px 24px; margin-bottom: 10px; text-align: justify; }
#legal-text h1 { font-family: inherit; font-size: 28px; font-weight: bold; margin: 4px 0px 4px 4px; }
#legal-text h2 { font-family: inherit; font-size: 18px; font-weight: bold; margin: 4px 0px 4px 4px; }
#legal-text ol { margin: 12px 0px 0px 24px; }
#legal-text li { padding: 0px 0px 0px 0px; margin: 0px 0px 18px 0px; }

#legal-text-editor { width: 100%; height: 400px; font-family: Courier New; }
#legal-text-editor-preview { width: 100%; }

#legal-text-diff ins { background-color: #aaffaa !important; }
#legal-text-diff del { background-color: #ffaaaa !important; }

.legal-text-container #siblings-container { float: right; border-bottom: 1px solid #e0e0e0; border-left: 1px solid #e0e0e0; background: #f8f8f8; padding: 0px 0px 0px 12px; }
.legal-text-container #siblings { margin: 0px; }

#diff-content { overflow: inherit; white-space: pre-wrap; }

#propose-change .comments { width: 100%; }
#propose-change .comments textarea { width: 100%; }

.instructions img.screenshot { border: 1px solid #a0a0a0; display: block; max-width: 800px; margin-top: 48px; margin-bottom: 48px; }
.instructions p, .instructions ul { margin-top: 16px; margin-bottom: 16px; max-width: 800px; }
.instructions ul li { padding-bottom: 12px; }
.instructions .instructions-nav p { margin: 0px; }
.instructions .instructions-nav label { margin: 0px; padding: 0px; float: left; width: 100px; clear: both; }

.profile-polities { border-bottom: 1px solid #e0e0e0; margin-bottom: 12px; }

.profile-document-data { margin-top: 12px; }
.profile-document-data p.document { font-weight: bold; font-size: 18px; }
.profile-document-data p.documentcontent { padding-left: 18px; }
.profile-document-data p.documentcontent small { padding-left: 8px; }

#newissues_list .issue-status { white-space: nowrap; }

.comment {
	background: #f7f7f7;
	margin:		2px;
	padding:	2px;
	padding-left: 5px;
	padding-right: 5px;
	border-radius:	3px;
}

.comment_created_by {
	font-size:	9pt;
	font-weight: bold;
	display:	inline;
	margin-right:	7px;
}

.comment_created {
	font-size:	8pt;
	color:		#888;
}

.comment_content {
	display:	inline;
}


ul.errorlist {
	color: #ff0000;
	list-style: none;
	margin-left: 4px;
}
#content {
	visibility: hidden;
	-webkit-box-shadow: 3px 3px 13px rgba(50, 50, 50, 0.75);
	-moz-box-shadow:    3px 3px 13px rgba(50, 50, 50, 0.75);
	box-shadow:         3px 3px 13px rgba(50, 50, 50, 0.75);
	margin-top: 2em;
	margin-bottom: 2em;
	border: 1px solid transparent;
	border-radius: 5px;
    height: 350px;
}

.document {
	position: relative;
}

#content_org {
	display: none;
}
#content_diff {
	display: none;
}

#content_diff ins {
	background-color: #aaffaa !important;
}
#content_diff del {
	background-color: #ffaaaa !important;
}

#versions .current {
	font-weight: bold;
}

